# space_war_backend

./: .dev_env  Cargo.toml  README.md  compose.yml  db_init.sql
src/: lib.rs  main.rs
src/db/: colors.rs  create_game.rs  create_player.rs  games.rs  get_game.rs  get_lobby.rs  get_ships.rs  join_game.rs  mod.rs  players.rs  update_player.rs
src/game/: mod.rs
src/router/: change_player.rs  create_game.rs  game_routes.rs  get_lobby.rs  get_player.rs  get_ships.rs  healthcheck.rs  join_game.rs  mod.rs  players.rs
