[package]
name = "space_war_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.8", features = ["macros"]}
color-eyre = "0.6.5"
eyre = "0.6.12"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "time"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.18"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing-subscriber = "0.3.22"
uuid = { version = "1.20.0", features = ["serde"] }
time = { version = "0.3.46", features = ["serde", "formatting"]}
